force-app/main/default/objects/Account/fields/Account_Test_Dicitionary__c.field-meta.xml
<CustomField>
    <fullName>Account_Test_Dicitionary__c</fullName>
    <inlineHelpText>namespace edit tteststest testingini testingteesting</inlineHelpText>
    <label>Account Test Dicitionary</label>
    <length>50</length>
    <type>Text</type>
</CustomField>