force-app/main/default/objects/Account/fields/Account_Tier__c.field-meta.xml
<CustomField>
    <fullName>Account_Tier__c</fullName>
    <description>desc1</description>
    <inlineHelpText>namespace edit testing</inlineHelpText>
    <label>Account Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Account_Tier</valueSetName>
    </valueSet>
</CustomField>