force-app/main/default/objects/Account/fields/active__c.field-meta.xml
<CustomField>
    <fullName>active__c</fullName>
    <description>Account is Active &amp; 123</description>
    <inlineHelpText>Account is Active now123</inlineHelpText>
    <label>Active</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>