force-app/main/default/objects/Account/fields/ActiveSFDCTest__c.field-meta.xml
<CustomField>
    <fullName>ActiveSFDCTest__c</fullName>
    <label>ActiveSFDCTest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ABC</fullName>
            </value>
            <value>
                <fullName>CDE</fullName>
            </value>
            <value>
                <fullName>EFG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>