force-app/main/default/objects/Account/fields/customerpriority__c.field-meta.xml
<CustomField>
    <fullName>customerpriority__c</fullName>
    <description>cvxcb</description>
    <inlineHelpText>cxvb</inlineHelpText>
    <label>Customer Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>