force-app/main/default/objects/Account/fields/DSCORGPKG__ITOrgChart__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__ITOrgChart__c</fullName>
    <formula>IF(ISBLANK(DSCORGPKG__DiscoverOrg_ID__c) = false,  
     HYPERLINK(
           &apos;/apex/DSCORGPKG__itorgchart?co_id=&apos;  +  DSCORGPKG__DiscoverOrg_ID__c ,
            &apos;View&apos;,
            &apos;_new&apos;) , 
    &apos;N/A&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IT Org Chart</label>
    <type>Text</type>
</CustomField>