force-app/main/default/objects/Account/fields/DSCORGPKG__Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Lead_Source__c</fullName>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>DiscoverOrg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>