force-app/main/default/objects/Account/fields/DSCORGPKG__Locked_By_User__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Locked_By_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Locked By User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>