force-app/main/default/objects/Account/fields/jAMES_TEST__c.field-meta.xml
<CustomField>
    <fullName>jAMES_TEST__c</fullName>
    <description>DHJDGJDTYJ</description>
    <label>jAMES TEST</label>
    <length>255</length>
    <type>Text</type>
</CustomField>