force-app/main/default/objects/Account/fields/numberoflocations__c.field-meta.xml
<CustomField>
    <fullName>numberoflocations__c</fullName>
    <description>A custom field on the Account standard object .</description>
    <inlineHelpText>The number of locations at this accouny</inlineHelpText>
    <label>Number of Locations</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>