force-app/main/default/objects/Account/fields/slaexpirationdate__c.field-meta.xml
<CustomField>
    <fullName>slaexpirationdate__c</fullName>
    <description>new</description>
    <inlineHelpText>new</inlineHelpText>
    <label>SLA Expiration Date</label>
    <type>Date</type>
</CustomField>