force-app/main/default/objects/Account/fields/slaserialnumber__c.field-meta.xml
<CustomField>
    <fullName>slaserialnumber__c</fullName>
    <description>new</description>
    <inlineHelpText>new</inlineHelpText>
    <label>SLA Serial Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>