force-app/main/default/objects/Account/fields/test__c.field-meta.xml
<CustomField>
    <fullName>test__c</fullName>
    <description>description changed again</description>
    <formula>AnnualRevenue  +  NumberOfEmployees</formula>
    <inlineHelpText>help needed</inlineHelpText>
    <label>Test</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>