force-app/main/default/objects/Account/fields/test_autonumber__c.field-meta.xml
<CustomField>
    <fullName>test_autonumber__c</fullName>
    <description>description else</description>
    <inlineHelpText>help</inlineHelpText>
    <label>Test AutoNumber</label>
    <type>AutoNumber</type>
</CustomField>