force-app/main/default/objects/Account/fields/test_checkbox__c.field-meta.xml
<CustomField>
    <fullName>test_checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>description</description>
    <inlineHelpText>help sadf</inlineHelpText>
    <label>Test checkbox</label>
    <type>Checkbox</type>
</CustomField>