force-app/main/default/objects/Account/fields/test_currency__c.field-meta.xml
<CustomField>
    <fullName>test_currency__c</fullName>
    <description>description changed</description>
    <inlineHelpText>help wde</inlineHelpText>
    <label>Test currency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>