force-app/main/default/objects/Account/fields/test_datetime__c.field-meta.xml
<CustomField>
    <fullName>test_datetime__c</fullName>
    <description>description</description>
    <inlineHelpText>help</inlineHelpText>
    <label>Test DateTime</label>
    <type>DateTime</type>
</CustomField>