force-app/main/default/objects/Account/fields/test_dependent_picklist__c.field-meta.xml
<CustomField>
    <fullName>test_dependent_picklist__c</fullName>
    <description>description</description>
    <inlineHelpText>help</inlineHelpText>
    <label>Test Dependent Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Test 11</fullName>
            </value>
            <value>
                <fullName>Test12</fullName>
            </value>
            <value>
                <fullName>Test21</fullName>
            </value>
            <value>
                <fullName>Test22</fullName>
            </value>
            <value>
                <fullName>Test23</fullName>
            </value>
            <value>
                <fullName>Test31</fullName>
            </value>
            <value>
                <fullName>Test32</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>