force-app/main/default/objects/Account/fields/test_email__c.field-meta.xml
<CustomField>
    <fullName>test_email__c</fullName>
    <description>description</description>
    <inlineHelpText>help</inlineHelpText>
    <label>Test Email</label>
    <type>Email</type>
</CustomField>