force-app/main/default/objects/Account/fields/Test_Encrypted_Text__c.field-meta.xml
<CustomField>
    <fullName>Test_Encrypted_Text__c</fullName>
    <label>Test Encrypted Text</label>
    <length>174</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>