force-app/main/default/objects/Account/fields/test_geolocation__c.field-meta.xml
<CustomField>
    <fullName>test_geolocation__c</fullName>
    <description>description</description>
    <inlineHelpText>help</inlineHelpText>
    <label>Test Geolocation</label>
    <scale>3</scale>
    <type>Location</type>
</CustomField>