force-app/main/default/objects/Account/fields/Test_Long_Rich_Text__c.field-meta.xml
<CustomField>
    <fullName>Test_Long_Rich_Text__c</fullName>
    <label>Test Long Rich Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>