force-app/main/default/objects/Account/fields/Test_Long_Text__c.field-meta.xml
<CustomField>
    <fullName>Test_Long_Text__c</fullName>
    <label>Test Long Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>