force-app/main/default/objects/Account/fields/test_lookup_to_james1__c.field-meta.xml
<CustomField>
    <fullName>test_lookup_to_james1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>x-w`</description>
    <inlineHelpText>x-w</inlineHelpText>
    <label>Test lookup To James1</label>
    <referenceTo>Helper__c</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>