force-app/main/default/objects/Account/fields/Test_Number_with_Decimal__c.field-meta.xml
<CustomField>
    <fullName>Test_Number_with_Decimal__c</fullName>
    <label>Test Number with Decimal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>