force-app/main/default/objects/Account/fields/test_phone__c.field-meta.xml
<CustomField>
    <fullName>test_phone__c</fullName>
    <description>description</description>
    <inlineHelpText>help</inlineHelpText>
    <label>Test Phone</label>
    <type>Phone</type>
</CustomField>