force-app/main/default/objects/Account/fields/test_picklist__c.field-meta.xml
<CustomField>
    <fullName>test_picklist__c</fullName>
    <description>description1</description>
    <inlineHelpText>help1</inlineHelpText>
    <label>Test Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>