force-app/main/default/objects/Account/fields/test_time__c.field-meta.xml
<CustomField>
    <fullName>test_time__c</fullName>
    <description>description</description>
    <inlineHelpText>help</inlineHelpText>
    <label>Test Time</label>
    <type>Time</type>
</CustomField>