force-app/main/default/objects/Account/fields/test_url__c.field-meta.xml
<CustomField>
    <fullName>test_url__c</fullName>
    <description>description</description>
    <inlineHelpText>help</inlineHelpText>
    <label>Test Url</label>
    <type>Url</type>
</CustomField>