force-app/main/default/objects/Account/fields/upsellopportunity__c.field-meta.xml
<CustomField>
    <fullName>upsellopportunity__c</fullName>
    <description>fds</description>
    <inlineHelpText>fsd</inlineHelpText>
    <label>Upsell Opportunity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Maybe</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>